@@ -1,7 +1,13 @@
 <% case ActiveScaffold.js_framework %>
 <% when :jquery %>
+<% if Jquery::Rails.const_defined? 'JQUERY_UI_VERSION' %>
 <% require_asset "jquery-ui" %>
 <% require_asset "jquery-ui-timepicker-addon" %>
+<% elsif Jquery.const_defined? 'Ui' %>
+<% require_asset "jquery.ui.core" %>
+<% require_asset "jquery.ui.datepicker" %>
+<% require_asset "jquery-ui-timepicker-addon" %>
+<% end %>
 <% require_asset "jquery/active_scaffold" %>
 <% require_asset "jquery/jquery.editinplace" %>
 <% require_asset "jquery/date_picker_bridge" %>
